--- a/style.css
+++ b/style.css
@@ -156,11 +156,18 @@ main {
 
 .dice {
   position: absolute;
-  left: 50%;
-  top: 16.5rem;
+  top: 22rem;
   transform: translateX(-50%);
-  height: 10rem;
+  height: 8rem;
   box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.2);
+}
+
+.dice--1 {
+  left: 43%;
+}
+
+.dice--2 {
+  left: 57%;
 }
 
 .player--winner {
